# urdf-to-mjcf

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  REFACTOR_TODO.md  REPO_EVALUATION.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
align_stp/: READMD.md  assign_mesh_part.py
docs/en/: ARCHITECTURE.md  EXAMPLES.md  METADATA_REFERENCE.md  TROUBLESHOOTING.md
docs/zh_CN/: ARCHITECTURE.md  EXAMPLES.md  METADATA_REFERENCE.md  TROUBLESHOOTING.md
src/robot2mjcf/: __init__.py  conversion_assets.py  conversion_body_builder.py  conversion_postprocess.py  convert.py
src/robot2mjcf/conversion/: assets.py
src/robot2mjcf/postprocess/: add_appendix.py  make_degrees.py  split_obj_materials.py  update_mesh.py
src/urdf2mjcf/: __init__.py  convert.py  geometry.py  mjcf2obj.py  mjcf_builders.py  model.py  model_path_manager.py  package_resolver.py  urdf_format.py  utils.py
src/urdf2mjcf/postprocess/: add_appendix.py  add_floor.py  add_light.py  check_shell.py  collision_to_stl.py  collisions.py  convex_collision.py  convex_decomposition.py  deduplicate_meshes.py  mesh_converter.py  move_mesh_scale.py  split_obj_materials.py  update_mesh.py
src/urdf_to_mjcf/: __init__.py  urdf_format.py
src/urdf_to_mjcf/cli/: __init__.py  convert.py  mjcf2obj.py  model_path.py
src/urdf_to_mjcf/conversion/: __init__.py  assets.py  body_builder.py  input.py  mjcf_assembly.py  output.py  pipeline.py
src/urdf_to_mjcf/core/: __init__.py  geometry.py  materials.py  model.py  package_resolver.py  utils.py
src/urdf_to_mjcf/postprocess/: __init__.py  add_appendix.py  add_backlash.py  add_floor.py  add_light.py  add_sensors.py  base_joint.py  capture.py  check_shell.py  collision_to_stl.py  collisions.py  convex_collision.py  convex_decomposition.py  deduplicate_meshes.py  explicit_floor_contacts.py  make_degrees.py  mesh_converter.py  move_mesh_scale.py  remove_redundancies.py  split_obj_materials.py  update_mesh.py
tests/: test_conversion_assets_and_builders.py  test_conversion_cli.py  test_conversion_core.py  test_conversion_helpers.py  test_conversion_input.py  test_conversion_mjcf_assembly.py  test_conversion_output.py  test_conversion_postprocess.py  test_conversion_scene.py  test_convert.py  test_geometry.py  test_high_risk_modules.py  test_import.py  test_model.py  test_model_path_manager.py  test_package_resolver.py  test_postprocess_appendix_and_backlash.py  test_postprocess_small_modules.py
urdf2mjcf/: __init__.py  convert.py  geometry.py  mjcf2obj.py  mjcf_builders.py
urdf2mjcf/postprocess/: capture.py  collision_to_stl.py  deduplicate_meshes.py  split_obj_materials.py  update_mesh.py
