[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot2mjcf"
dynamic = ["version"]
description = "Convert URDF to MJCF with advanced mesh processing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yufei Jia", email = "jyf23@mails.tsinghua.edu.cn"}
]
keywords = ["urdf", "mjcf", "mujoco", "robotics", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.3.2",
    "numpy",
    "pydantic",
    "scipy",
    "coacd",
    "trimesh>=4.6.0",
    "pycollada",
    "fast-simplification",
    "pillow",
    "pymeshlab",
    "rtree",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/discoverse-dev/robot2mjcf"
Repository = "https://github.com/discoverse-dev/robot2mjcf"
Issues = "https://github.com/discoverse-dev/robot2mjcf/issues"

[project.scripts]
robot2mjcf = "robot2mjcf.cli.convert:main"
robot2mjcf-mjcf2obj = "robot2mjcf.cli.mjcf2obj:main"
robot2mjcf-modelpath = "robot2mjcf.cli.model_path:main"
robot2mjcf-urdfformat = "robot2mjcf.urdf_format:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.version]
path = "src/robot2mjcf/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/robot2mjcf"]

[tool.hatch.build.targets.sdist]
exclude = [".pkg-smoke", ".uv-cache", ".venv", "dist"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "N801",  # Class name should use CapWords (historical model names)
    "N806",  # Variable in function should be lowercase (MTL field names)
    "N812",  # Lowercase imported as non-lowercase
    "N815",  # Variable in class scope should not be mixedCase (MTL fields)
    "N816",  # Variable in global scope should not be mixedCase
    "N817",  # CamelCase imported as acronym
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=robot2mjcf --cov-report=term-missing --cov-fail-under=50"

[tool.coverage.run]
source = ["src/robot2mjcf"]
omit = [
    "*/tests/*",
    "*/postprocess/capture.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
ignore_missing_imports = true
